tests/fail/breakpoint.rs
#![feature(core_intrinsics)]

fn main() {
    std::intrinsics::breakpoint(); //~ ERROR: trace/breakpoint trap
}
